make library embedable in the site

--- a/lib/ShortPixelWeb/tpl/comparer.html
+++ b/lib/ShortPixelWeb/tpl/comparer.html
@@ -1,3 +1,20 @@
+<div id="showImage" class="sp-shade" role="dialog" style="z-index:2000;">
+    <div class="modal-dialog">
+        <div class="modal-content" style="border-radius:0;">
+            <div class="modal-header">
+                <h4 class="modal-title">Optimized image</h4>
+                <button type="button" style="margin-top:-30px;width:5%;" class="close" data-dismiss="modal" onclick="$('#showImage').hide();">&times;</button>
+            </div>
+            <div class="modal-body" style="height:400px;padding:0;">
+                <div class="shortpixel-slider" style="z-index:2000;">
+                    <div class="twentytwenty-container">
+                        <img class="uploadCompareOptimized" style="position: relative;"/>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 <div id="uploadCompare" class="sp-shade" role="dialog">
     <div class="modal-dialog">
         <div class="modal-content" style="border-radius:0;">
