--- a/lib/ShortPixelWeb/tpl/success.html
+++ b/lib/ShortPixelWeb/tpl/success.html
@@ -1,6 +1,8 @@
+<!-- BEGIN: congratulations -->
 <div>
     <h2>Congratulations, {folder} is optimized!</h2>
 </div>
+<!-- END: congratulations -->
 <div style="float:right;">
     <span class="bulk-opt-percent">Overall optimization:<br><input id="total-optimization-percent" type="text" class="dial" value="{total_percent}%"/></span>
 </div>
