--- a/lib/ShortPixelWeb/tpl/success.html
+++ b/lib/ShortPixelWeb/tpl/success.html
@@ -6,25 +6,27 @@
 <div style="float:right;">
     <span class="bulk-opt-percent">Overall optimization:<br><input id="total-optimization-percent" type="text" class="dial" value="{total_percent}%"/></span>
 </div>
+<div id="opt_report">
 <div style="display:inline-block;width:30%;text-align:right;">
     Total images:
 </div>
-<div style="display:inline-block;width:30%;text-align:left;">
+<div id="total_files" style="display:inline-block;width:30%;text-align:left;">
     {total_files}
 </div>
 <div></div>
 <div style="display:inline-block;width:30%;text-align:right;">
     Optimized images:
 </div>
-<div style="display:inline-block;width:30%;text-align:left;">
+<div id="succeeded_files" style="display:inline-block;width:30%;text-align:left;">
     {succeeded_files}
 </div>
 <div></div>
 <div style="display:inline-block;width:30%;text-align:right;">
     Failed images:
 </div>
-<div style="display:inline-block;width:30%;text-align:left;">
+<div id="failed_files" style="display:inline-block;width:30%;text-align:left;">
     {failed_files}
+</div>
 </div>
 <div class="sp-folder-results">
     <div class="sp-folder-tree-title">Optimization details:</div>
